--- a/css/style.css
+++ b/css/style.css
@@ -8,3 +8,22 @@
 img {
   max-width: 100%;
 }
+
+/* UTILITIES */
+.flex{
+  display: flex;
+}
+
+.container{
+  width: 80%;
+  margin: 0 auto;
+}
+
+/* MAIN */
+.wrap{
+  justify-content: space-between;
+}
+
+.col{
+  width: calc(95% / 3);
+}
