--- a/css/style.css
+++ b/css/style.css
@@ -21,6 +21,7 @@ a {
 
 .container{
   width: 70%;
+  max-width: 1100px;
   margin: 0 auto;
 }
 
@@ -28,6 +29,10 @@ a {
 header{
   height: 5rem;
   background-color: #ff6900;
+  position: fixed;
+  top: 0 ;
+  left: 0;
+  width: 100%;
 }
 
 .navigation{
@@ -63,6 +68,7 @@ header{
 /* MAIN */
 .wrap{
   padding-top: 4rem;
+  padding-bottom: 4rem;
   flex-wrap: wrap;
   justify-content: space-between;
 }
@@ -73,9 +79,12 @@ header{
   padding-bottom: 1rem;
 }
 
+.img{
+  position: relative;
+}
 /* HOVER IMG */
 .img-view {
-  display: inline-block;
+  display: block;
 }
 
 .img-hide {
@@ -87,7 +96,7 @@ header{
 }
 
 .col:hover .img-hide {
-  display: inline-block;
+  display: block;
 }
 
 /* HEART */
@@ -109,14 +118,15 @@ header{
 
 /* PROMO */
 
-.badge{
+.promo{
   position: absolute;
-  bottom: 5.5rem;
+  bottom: 30px;
   left: 0;
-  text-align: center;
-  padding: .2rem .4rem;
-  font-size: .8rem;
   color: white;
+}
+
+.badge{
+
 }
 
 .discount{
